--- a/manifest.yml
+++ b/manifest.yml
@@ -1,21 +1,20 @@
 modules:
   jira:issuePanel:
-    - key: buttons-hello-world-issue-panel
+    - key: deny-approve-buttons
       resource: main
       resolver:
         function: resolver
       render: native
-      title: buttons
+      title: Deny/Approve buttons
       icon: https://developer.atlassian.com/platform/forge/images/icons/issue-panel-icon.svg
-     
 
   jira:adminPage:
-    - key: admin-panel
+    - key: deny-approve-buttons-configuration
       resource: admin
       resolver:
         function: resolver
       render: native
-      title: Admin Panel
+      title: Deny/Approve buttons configuration
       icon: https://developer.atlassian.com/platform/forge/images/icons/issue-panel-icon.svg
   function:
     - key: resolver
@@ -31,7 +30,7 @@ app:
   id: ari:cloud:ecosystem::app/b398905c-c99d-4f74-8a0a-b859941297ae
 permissions:
   scopes:
-    - storage:app
-    - read:jira-work
-    - read:jira-user
+    - storage:app    
+    - read:jira-work 
+    - read:jira-user  
     - write:jira-work
